@@ -1,3 +1,6 @@
+2007-11-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/Config/_GrampsGconfKeys.py: fixed changes in gconf interface
+
 2007-11-25  Douglas S.Blank  <dblank@cs.brynmawr.edu>
 	* src/gen/lib/test/date_test.py: turned each test into a case
 
